--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,12 @@ body {
     flex-direction: column;
     align-items: center;
     color: white;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+html{
+    height: 100%;
 }
 h1 {
     text-align: center;
@@ -24,13 +30,15 @@ form {
     margin-top: 2rem;
 }
 textarea {
-    width: 100%;
-    padding: 10px;
+    padding-top: 0.5rem;
+    width: 70%;
     font-size: 1rem;
     border: none;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    margin-bottom:3px;
+    margin:auto;
+    display: block;
+    text-align: center;
     
 }
 .radio-group {
@@ -38,19 +46,127 @@ textarea {
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 .radio-option {
     display: flex;
     align-items: center;
+    letter-spacing: 2px;
 }
 input[type="radio"] {
     margin-right: 0.5rem;
 }
-#btn{
+button{
     width: 100px;
-    margin-top: 10px;
     height: 30px;
     text-align: center;
-    margin-left: 100px;
+    margin:auto;
+    display: block;
+}
+.output{
+    text-align: center;
+    color: black;
+    max-width: 600px;
+    width: 100%;
+    margin-top: 1.5rem;
+}
+
+@media (max-width: 768px){/* tablet view yuh*/
+
+    h1{
+        text-align: center;
+        font-weight: 300;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        letter-spacing: 2px;
+        margin-top: 2rem;
+        font-size: 2.5rem;
+    }
+
+    textarea {
+        padding-top: 0.2rem;
+        width: 50%;
+        font-size: 1rem;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        margin:auto;
+        display: block;
+        text-align: center;
+        
+    }
+    .radio-group{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: auto;
+        margin-right: 80px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .radio-option{
+        display: flex;
+       /* align-items: center;*/
+        justify-content: center;
+        letter-spacing: 2px;
+    }
+
+    textarea{
+    padding-top: 0.2rem;
+    width: 50%;
+    font-size: 0.5rem;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin:auto;
+    display: block;
+    text-align: center;
+    }
+} 
+
+@media (max-width:400px){
+    h1{
+        text-align: center;
+        font-weight: 300;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        letter-spacing: 2px;
+        margin-top: 2rem;
+        font-size: 1rem;
+    }
+
+    textarea {
+        padding-top: 0.1rem;
+        width: 60%;
+        font-size: 0.5rem;
+        border: none;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        margin:auto;
+        display: block;
+        text-align: center;
+    }
+
+    .radio-group{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: auto;
+        margin-right: 80px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .radio-option{
+        display: flex;
+       /* align-items: center;*/
+        justify-content: center;
+        letter-spacing: 0.5px;
+    }
+
+
+
+
+
+
 }
